# ESP32-Homework

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  activate_idf.ps1  sdkconfig  sdkconfig.defaults  sdkconfig.old
Doc/: V0.0 260609分析架构-DeepSeekV4Pro.md  V0.0 260609分析架构-Doubuo-Seed-2-Code.md  V0.0 260609分析架构-Qwen3.6-Plus.md  task_app_mainbusiness任务中的状态机V0.0说明.md  人岗和AI岗会话-备份-260608 11.39.md  学生第一次与AI助手对话.md  学生第二次与AI助手对话.md  操作.Prj从idf-v5.5.3移值到idf-v6.0.1.md  操作1 把本地项目推送到一个新建的仓库.md
IDF_vX.X.X_Powershell.Ink/: IDF_v5.5.3_Powershell.lnk  IDF_v5.5.4_Powershell.lnk  IDF_v6.0.1_Powershell.lnk
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  blink_example_main.c  bsp.c  bsp.h  idf_component.yml  sensor_data_mgr.c  sensor_data_mgr.h  task_app_btn.c  task_app_btn.h  task_app_cmd.c  task_app_cmd.h  task_app_mainbusiness.c  task_app_mainbusiness.h  task_app_mqtt.c  task_app_mqtt.h  task_app_sensor.c  task_app_sensor.h  task_app_sensor_comm.c  task_app_sensor_comm.h  task_app_wifi_manage.c  task_app_wifi_manage.h  task_monitor.c  task_monitor.h
oneshot_read/main/: oneshot_read_main.c
